--- a/src/test/resources/config/test.properties
+++ b/src/test/resources/config/test.properties
@@ -1,7 +1,7 @@
 browser=chrome
 browserVersion=100
 browserSize=1920x1080
-remoteDriverUrl=https://user1:1234@selenoid.autotests.cloud/wd/hub/
+remoteUrl=https://user1:1234@selenoid.autotests.cloud/wd/hub/
 token =5546280c-be21-48b5-9d9d-7722eaed55a1
 username =allure8
 password =allure8
